[package]
name = "mitm_music"
version = "0.4.1"
edition = "2021"
description = "Use MITM technology to provide features like rewrite, redirect."
license = "MIT"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
bytes = { version = "1", features = ["serde"] }
byteorder = "1.4"
clap = { version = "4", features = ["derive"] }
cfg-if = "1"
env_logger = "0.9"

http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "server", "stream", "tcp", "runtime"]  }
hyper-proxy = { version = "0.9" }
hyper-rustls = { version = "0.24" }
hyper-tls = { version = "0.5", optional = true }
log = "0.4"
lazy_static = "1.4"
moka = { version = "0.11", features = ["future"] }
openssl = { version = "0.10",  optional = true }#features = ["vendored"],
pin-project = "1"
rcgen = { version = "0.10", features = ["x509-parser"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
time = "0.3"
typed-builder = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24", default-features = false, features = ["tls12"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2.2.2"
wildmatch = "2.1"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rand = "0.8"
rustls-pemfile = "1.0.3"



[features]
default = ["h2", "request-native-tls"]
request-native-tls = ["hyper-tls", "openssl"]
h2 = ["hyper-rustls/http2"]
